test/functions/compilation-errors/error-stack-trace-recursive2.good
error-stack-trace-recursive2.chpl:29: In function 'badfn':
error-stack-trace-recursive2.chpl:30: error: Cannot assign to string from int(64)
  error-stack-trace-recursive2.chpl:25: function 'badfn' called as badfn(arg: string) within function 'c'
  error-stack-trace-recursive2.chpl:20: function 'c' called as c(arg: string) within function 'b'
  error-stack-trace-recursive2.chpl:16: function 'b' called as b(arg: string) within function 'a'
  error-stack-trace-recursive2.chpl:11: function 'a' called as a(arg: string) within function 'h'
  error-stack-trace-recursive2.chpl:6: function 'h' called as h(arg: string) within function 'g'
  error-stack-trace-recursive2.chpl:2: function 'g' called as g(arg: string) within function 'f'
  error-stack-trace-recursive2.chpl:33: function 'f' called as f(arg: string)
